<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/title_bar"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/layout_ll_titleBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/view_tv_titleBarContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/title_bar_angle"
                android:paddingTop="5dp"
                android:scaleType="center"
                android:src="@drawable/title_bar_angle" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_rl_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="center" />

    <RadioGroup
        android:id="@+id/group_rg_tabs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/button_rb_tabDay"
            style="@style/tab_radio"
            android:drawableTop="@drawable/selector_tab_day"
            android:text="@string/tab_day" />

        <RadioButton
            android:id="@+id/button_rb_tabMonth"
            style="@style/tab_radio"
            android:drawableTop="@drawable/selector_tab_month"
            android:text="@string/tab_month" />
    </RadioGroup>

</LinearLayout>